--- a/src/plugins/yajl/CMakeLists.txt
+++ b/src/plugins/yajl/CMakeLists.txt
@@ -15,8 +15,9 @@ if (YAJL_FOUND)
 		INCLUDE_DIRECTORIES
 			${YAJL_INCLUDE_DIR}
 			${CMAKE_CURRENT_BINARY_DIR}
-		LINK_LIBRARIES
+		LINK_ELEKTRA
 			elektra-ease
+		LINK_LIBRARIES
 			${YAJL_LIBRARIES}
 		)
 
