spec: its always good to have examples

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -213,6 +213,13 @@ usedby/tool= gen
 [rationale]
 
 [description]
+description = this is information provided for the developer
+  and *not* a comment from administrators
+
+[example]
+description = it is always good to have an example.
+  The example is only for documentation unlike the default
+  which will be used if nothing else is given.
 
 
 
