enable hack only for apple
fix #491

--- a/src/plugins/crypto/CMakeLists.txt
+++ b/src/plugins/crypto/CMakeLists.txt
@@ -30,17 +30,17 @@ add_plugin (crypto
 add_plugintest (crypto)
 
 #
-# HACK for non-Linux systems
+# HACK for Apple
 # check if library detection is required
 #
-if (DEFINED OPENSSL_INCLUDE_DIR AND DEFINED OPENSSL_LIBRARIES)
+if (APPLE AND DEFINED OPENSSL_INCLUDE_DIR AND DEFINED OPENSSL_LIBRARIES)
 	set (OPENSSL_MANUAL_OSX_HACK on)
 	set (OPENSSL_FOUND on)
 else ()
 	set (OPENSSL_MANUAL_OSX_HACK off)
 endif ()
 
-if (DEFINED LIBGCRYPT_INCLUDE_DIR AND DEFINED LIBGCRYPT_LIBRARIES)
+if (APPLE AND DEFINED LIBGCRYPT_INCLUDE_DIR AND DEFINED LIBGCRYPT_LIBRARIES)
 	set (LIBGCRYPT_MANUAL_OSX_HACK on)
 	set (LIBGCRYPT_FOUND on)
 else ()
