link elektra-kdb
in example some linking could be avoided
also did some cleanup of unnecessary target_link_elektra
	(if tools was already used)

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -7,7 +7,7 @@ macro (do_benchmark source)
 	set (SOURCES ${HDR_FILES} benchmarks.c benchmarks.h ${source}.c)
 	add_executable (${source} ${SOURCES})
 
-	target_link_elektra(${source})
+	target_link_elektra(${source} elektra-kdb)
 
 	set_target_properties (${source} PROPERTIES
 			COMPILE_DEFINITIONS HAVE_KDBCONFIG_H)
