--- a/src/libs/tools/benchmarks/CMakeLists.txt
+++ b/src/libs/tools/benchmarks/CMakeLists.txt
@@ -9,8 +9,7 @@ macro (do_benchmark source)
 	set (SOURCES ${HDR_FILES} ${source}.cpp)
 	add_executable (${source} ${SOURCES})
 
-	target_link_elektra(${source})
-	target_link_elektratools(${source})
+	target_link_elektratools(${source} elektra-kdb)
 
 	set_target_properties (${source} PROPERTIES
 			COMPILE_DEFINITIONS HAVE_KDBCONFIG_H)
