spec: fix examples/rename them, improve spec README

--- a/examples/spec/battery.ini
+++ b/examples/spec/battery.ini
@@ -3,5 +3,5 @@ mountpoint = battery.ini
 infos/plugins = ini
 
 [level]
-check/enum = critical, low, high, full
+check/enum = 'critical', 'low', 'high', 'full'
 
