--- a/examples/spec/openicc.ini
+++ b/examples/spec/openicc.ini
@@ -29,14 +29,16 @@ example = ShinyGlass
 
 
 [device/camera/#/EXIF_serial]
-type = long
+type = double
+description = in json there is no long
 check/type = long
 example = 1200000
 
 
 
 [device/camera/#/automatic_assigment]
-type = long
+type = double
+description = in json there is no long
 check/type = long
 check/type/min = 1
 check/type/max = 5
