Fixes #488 - explicitly find library iconv for iconv and filecheck plugins

--- a/src/plugins/filecheck/CMakeLists.txt
+++ b/src/plugins/filecheck/CMakeLists.txt
@@ -1,9 +1,19 @@
 include (LibAddMacros)
 
-add_plugin (filecheck
-	SOURCES
-		filecheck.h
-		filecheck.c
+find_package(iconv)
+
+if (ICONV_FOUND)
+	add_plugin (filecheck
+		SOURCES
+			filecheck.h
+			filecheck.c
+		INCLUDE_DIRECTORIES
+			${ICONV_INCLUDE_DIR}	
+		LINK_LIBRARIES
+			${ICONV_LIBRARIES}
 	)
-install(DIRECTORY filecheck DESTINATION ${TARGET_TEST_DATA_FOLDER})
-add_plugintest (filecheck)
+	install(DIRECTORY filecheck DESTINATION ${TARGET_TEST_DATA_FOLDER})
+	add_plugintest (filecheck)
+else ()
+	remove_plugin(filecheck "Can't find iconv library")
+endif ()
