augeas: link elektra libraries correctly

--- a/src/plugins/augeas/CMakeLists.txt
+++ b/src/plugins/augeas/CMakeLists.txt
@@ -22,9 +22,10 @@ if (LIBAUGEAS_FOUND AND LIBXML2_FOUND)
 			INCLUDE_DIRECTORIES
 				${LIBAUGEAS_INCLUDE_DIR}
 				${LIBXML2_INCLUDE_DIR}
-			LINK_LIBRARIES
+			LINK_ELEKTRA
 				elektra-meta
 				elektra-proposal
+			LINK_LIBRARIES
 				${LIBAUGEAS_LIBRARIES}
 				${LIBXML2_LIBRARIES}
 			)
