Fix spelling mistake

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -55,7 +55,7 @@ status = implemented
 usedby = plugin
 description = Exports constants that might be interesting for users,
   applications or other plugins.
-  All plugin specific compilation information (e.g. verbosity, pathes)
+  All plugin specific compilation information (e.g. verbosity, paths)
   should be exported as constants.
 
 [infos]
