list plugin: apply dependencies to plugin test only

--- a/src/plugins/list/CMakeLists.txt
+++ b/src/plugins/list/CMakeLists.txt
@@ -1,18 +1,16 @@
 include (LibAddMacros)
 
+add_plugin(list
+	SOURCES
+		list.h
+		list.c
+	LINK_ELEKTRA
+		elektra-kdb
+)
+
 list(FIND PLUGINS "rename" _rename)
 list(FIND PLUGINS "keytometa" _keytometa)
 
-if(_rename GREATER -1 AND _keytometa GREATER -1)
-	add_plugin(list
-		SOURCES
-			list.h
-			list.c
-		LINK_ELEKTRA
-			elektra-kdb
-	)
-	
+if(_rename AND _keytometa GREATER -1)
 	add_plugintest(list)
-else()
-	remove_plugin(list "needs plugins: rename, keytometa")
 endif()
