--- a/src/plugins/list/CMakeLists.txt
+++ b/src/plugins/list/CMakeLists.txt
@@ -13,4 +13,6 @@ list(FIND PLUGINS "keytometa" _keytometa)
 
 if(_rename AND _keytometa GREATER -1)
 	add_plugintest(list)
+else()
+	message (STATUS "Disabling Plugin-Test of list, depends on: rename, keytometa")
 endif()
