conform to conventions

--- a/src/plugins/list/CMakeLists.txt
+++ b/src/plugins/list/CMakeLists.txt
@@ -11,7 +11,7 @@ add_plugin(list
 list(FIND PLUGINS "rename" RENAME_INDEX)
 list(FIND PLUGINS "keytometa" KEYTOMETA_INDEX)
 
-if(BUILD_TESTING AND RENAME_INDEX AND KEYTOMETA_INDEX GREATER -1)
+if(BUILD_TESTING AND RENAME_INDEX GREATER -1 AND KEYTOMETA_INDEX GREATER -1)
 	add_plugintest(list)
 else()
 	message (WARNING "rename and keytometa plugins are required for testing, test deactivated")
