spec: add further examples

--- a/examples/spec/locationtracker.ini
+++ b/examples/spec/locationtracker.ini
@@ -3,13 +3,20 @@ mountpoint = lt.conf
 description = location tracker root
 
 [ntp]
-mountpoint = ntp.conf
+mountpoint = /etc/ntp.conf
 infos/plugins = augeas lens=ntpd.lns syslog
 description = a nested plugin
 ;transform/batterytontp = battery/level minpoll maxpoll
 
+[val]
+check/type = long
+check/type/min = 5
+check/type/max = 10
+
 [getenv/ntpd_updateintervall]
 check/type = long
+check/type/min = 5
+check/type/max = 10
 rename/toupper = 1
 
 [locationtracker/secret]
