add testcase for lua transformation

--- a/examples/spec/locationtracker.ini
+++ b/examples/spec/locationtracker.ini
@@ -22,9 +22,13 @@ rename/toupper = 1
 [locationtracker/secret]
 ;infos/plugins = crypto cipher=DES crypto
 
+[battery/level]
+
 [locationtracker/polling]
+; need to adapt path (must be full-path)
+; infos/plugins = lua script=~/src/plugins/lua/lua/batterytotracker.lua
+; transform/batterytotracker = battery/level
 description = GPS polling time in seconds
-;transform/batterytotracker = battery/level
 
 [gps]
 mountpoint = gps.conf
