disable simpleini on OS X until fix is available

--- a/src/plugins/simpleini/CMakeLists.txt
+++ b/src/plugins/simpleini/CMakeLists.txt
@@ -1,9 +1,13 @@
 include (LibAddMacros)
 
-add_plugin(simpleini
-	SOURCES
-		simpleini.h
-		simpleini.c
-	)
+if(APPLE)
+	remove_plugin(simpleini "broken on Mac OS X")
+else()
+	add_plugin(simpleini
+		SOURCES
+			simpleini.h
+			simpleini.c
+		)
+endif()
 
 #add_plugintest (simpleini)
