--- a/src/tools/race/CMakeLists.txt
+++ b/src/tools/race/CMakeLists.txt
@@ -1,4 +1,5 @@
 find_package(Threads)
+find_package(LibRt)
 
 if (APPLE)
 	remove_tool(race "race tool does not compile under MAC OS X")
@@ -8,7 +9,7 @@ else()
 	add_executable(race race.c)
 	tool_link_elektra(race)
 	target_link_libraries(race ${CMAKE_THREAD_LIBS_INIT})
-	target_link_libraries(race ${CMAKE_REALTIME_LIBS_INIT})
+	target_link_libraries(race ${LIBRT_LIBRARIES})
 
 	install(TARGETS race DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 endif()
