prettify resolver's CMakeLists.txt

--- a/src/plugins/resolver/CMakeLists.txt
+++ b/src/plugins/resolver/CMakeLists.txt
@@ -5,39 +5,25 @@ set (SOURCES resolver.h resolver.c filename.c)
 find_package(Threads)
 find_package(LibRt)
 
+set (CMAKE_RESOLVER_DEFAULT_LIBS ${CMAKE_THREAD_LIBS_INIT})
+if (LIBRT_FOUND)
+	set (CMAKE_RESOLVER_DEFAULT_LIBS ${CMAKE_RESOLVER_DEFAULT_LIBS} ${LIBRT_LIBRARIES})
+endif ()
 
 #TODO: remove "default" resolver
-if (LIBRT_FOUND)
-	add_plugin(resolver
-		SOURCES
-			${SOURCES}
-		LINK_LIBRARIES
-			${CMAKE_THREAD_LIBS_INIT}
-			${LIBRT_LIBRARIES}
-		COMPILE_DEFINITIONS
-			ELEKTRA_VARIANT_BASE=\"\"
-			ELEKTRA_VARIANT_USER=\"hpu\"
-			ELEKTRA_VARIANT_SYSTEM=\"b\"
-			ELEKTRA_PLUGIN_NAME=\"resolver\"
-			ELEKTRA_LOCK_FILE
-			ELEKTRA_LOCK_MUTEX
-	)
-else ()
-	add_plugin(resolver
-		SOURCES
-			${SOURCES}
-		LINK_LIBRARIES
-			${CMAKE_THREAD_LIBS_INIT}
-		COMPILE_DEFINITIONS
-			ELEKTRA_VARIANT_BASE=\"\"
-			ELEKTRA_VARIANT_USER=\"hpu\"
-			ELEKTRA_VARIANT_SYSTEM=\"b\"
-			ELEKTRA_PLUGIN_NAME=\"resolver\"
-			ELEKTRA_LOCK_FILE
-			ELEKTRA_LOCK_MUTEX
-	)
-endif()
-
+add_plugin(resolver
+	SOURCES
+		${SOURCES}
+	LINK_LIBRARIES
+		${CMAKE_RESOLVER_DEFAULT_LIBS}
+	COMPILE_DEFINITIONS
+		ELEKTRA_VARIANT_BASE=\"\"
+		ELEKTRA_VARIANT_USER=\"hpu\"
+		ELEKTRA_VARIANT_SYSTEM=\"b\"
+		ELEKTRA_PLUGIN_NAME=\"resolver\"
+		ELEKTRA_LOCK_FILE
+		ELEKTRA_LOCK_MUTEX
+)
 
 add_plugintest(resolver)
 
