more flexible add_plugin
jni python2 seem to be broken
default storage/resolver links missing
removal of "resolver" plugin missing

--- a/src/include/kdbconfig.h.in
+++ b/src/include/kdbconfig.h.in
@@ -45,7 +45,7 @@
 
 #define KDB_DEFAULT_RESOLVER     "@KDB_DEFAULT_RESOLVER@"
 
-#define ELEKTRA_PLUGINS          "@PLUGINS@"
+#define ELEKTRA_PLUGINS          "@ADDED_PLUGINS@"
 
 #define ELEKTRA_TOOLS            "@TOOLS@"
 
