--- a/src/plugins/constants/CMakeLists.txt
+++ b/src/plugins/constants/CMakeLists.txt
@@ -1,9 +1,10 @@
 include (LibAddMacros)
 
+if (DEPENDENCY_PHASE)
+	configure_file (constants.c.in ${CMAKE_BINARY_DIR}/constants.c)
+endif ()
 
-configure_file(constants.c.in ${CMAKE_BINARY_DIR}/constants.c)
-
-add_plugin(constants
+add_plugin (constants
 	SOURCES
 		${CMAKE_BINARY_DIR}/constants.c
 	)
