--- a/src/plugins/dbus/CMakeLists.txt
+++ b/src/plugins/dbus/CMakeLists.txt
@@ -1,22 +1,25 @@
-find_package(DBus)
+if (DEPENDENCY_PHASE)
+	find_package (DBus)
 
-if (DBUS_FOUND)
-	add_plugin(dbus
-		SOURCES
-			dbus.h dbus.c
-			sendmessage.c receivemessage.c
-		INCLUDE_DIRECTORIES
-			${DBUS_INCLUDE_DIR}
-			${DBUS_ARCH_INCLUDE_DIR}
-		LINK_LIBRARIES
-			${DBUS_LIBRARIES}
-		)
+	if (DBUS_FOUND)
 
-	include_directories(${DBUS_INCLUDE_DIR})
-	include_directories(${DBUS_ARCH_INCLUDE_DIR})
-	add_plugintest (dbus
-			sendmessage.c receivemessage.c
-			)
-else (DBUS_FOUND)
-	remove_plugin (dbus "dbus not found")
-endif (DBUS_FOUND)
+		include_directories (${DBUS_INCLUDE_DIR})
+		include_directories (${DBUS_ARCH_INCLUDE_DIR})
+		add_plugintest (dbus
+				sendmessage.c receivemessage.c
+				)
+	else (DBUS_FOUND)
+		remove_plugin (dbus "dbus not found")
+	endif (DBUS_FOUND)
+endif ()
+
+add_plugin (dbus
+	SOURCES
+		dbus.h dbus.c
+		sendmessage.c receivemessage.c
+	INCLUDE_DIRECTORIES
+		${DBUS_INCLUDE_DIR}
+		${DBUS_ARCH_INCLUDE_DIR}
+	LINK_LIBRARIES
+		${DBUS_LIBRARIES}
+	)
