--- a/src/plugins/filecheck/CMakeLists.txt
+++ b/src/plugins/filecheck/CMakeLists.txt
@@ -1,19 +1,21 @@
 include (LibAddMacros)
+if (DEPENDENCY_PHASE)
+	find_package (Iconv)
 
-find_package(Iconv)
-
-if (ICONV_FOUND)
-	add_plugin (filecheck
-		SOURCES
-			filecheck.h
-			filecheck.c
-		INCLUDE_DIRECTORIES
-			${ICONV_INCLUDE_DIR}	
-		LINK_LIBRARIES
-			${ICONV_LIBRARIES}
-	)
-	install(DIRECTORY filecheck DESTINATION ${TARGET_TEST_DATA_FOLDER})
-	add_plugintest (filecheck)
-else ()
-	remove_plugin(filecheck "Can't find iconv library")
+	if (ICONV_FOUND)
+		install(DIRECTORY filecheck DESTINATION ${TARGET_TEST_DATA_FOLDER})
+		add_plugintest (filecheck)
+	else ()
+		remove_plugin(filecheck "Can't find iconv library")
+	endif ()
 endif ()
+
+add_plugin (filecheck
+	SOURCES
+		filecheck.h
+		filecheck.c
+	INCLUDE_DIRECTORIES
+		${ICONV_INCLUDE_DIR}	
+	LINK_LIBRARIES
+		${ICONV_LIBRARIES}
+)
