--- a/src/plugins/simpleini/CMakeLists.txt
+++ b/src/plugins/simpleini/CMakeLists.txt
@@ -1,9 +1,8 @@
 include (LibAddMacros)
 
-if(APPLE)
-	remove_plugin(simpleini "broken on Mac OS X")
-else()
-	add_plugin(simpleini
+# silently ignore plugin on apple
+if(NOT APPLE)
+	add_plugin (simpleini
 		SOURCES
 			simpleini.h
 			simpleini.c
