--- a/src/plugins/type/CMakeLists.txt
+++ b/src/plugins/type/CMakeLists.txt
@@ -1,4 +1,12 @@
-find_package(Threads)
+if (DEPENDENCY_PHASE)
+	include (LibAddTest)
+	include_directories ("${CMAKE_SOURCE_DIR}/src/bindings/cpp/tests")
+	add_gtest (testmod_type
+		MEMLEAK
+		SOURCES types.cpp
+		)
+endif ()
+
 
 add_plugin (type
 	CPP
@@ -7,10 +15,3 @@ add_plugin (type
 		types.hpp types.cpp
 		type_checker.hpp
 	)
-
-include (LibAddTest)
-include_directories ("${CMAKE_SOURCE_DIR}/src/bindings/cpp/tests")
-add_gtest (testmod_type
-		MEMLEAK
-		SOURCES types.cpp
-		)
