--- a/src/plugins/uname/CMakeLists.txt
+++ b/src/plugins/uname/CMakeLists.txt
@@ -1,19 +1,20 @@
-try_compile(HAS_UNAME
-		"${CMAKE_BINARY_DIR}"
-		"${PROJECT_SOURCE_DIR}/src/plugins/uname/testuname.c"
-		)
+if (DEPENDENCY_PHASE)
+	try_compile(HAS_UNAME
+			"${CMAKE_BINARY_DIR}"
+			"${PROJECT_SOURCE_DIR}/src/plugins/uname/testuname.c"
+			)
 
-include(LibAddMacros)
+	include(LibAddMacros)
 
-if (HAS_UNAME)
+	if (HAS_UNAME)
+		add_plugintest (uname)
+	else()
+		remove_plugin (uname "uname is missing")
+	endif()
+endif ()
 
-	add_plugin(uname
-		SOURCES
-			uname.h
-			uname.c
-	)
-
-	add_plugintest (uname)
-else()
-	remove_plugin (uname "uname is missing")
-endif()
+add_plugin (uname
+	SOURCES
+		uname.h
+		uname.c
+)
