fix intree builds

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -9,7 +9,8 @@ set (ADDTESTING_PHASE OFF)
 file (GLOB DIRECTORIES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
 
 foreach (plugin ${DIRECTORIES})
-	if (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${plugin})
+	message (STATUS ${plugin})
+	if (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${plugin} AND NOT ${plugin} STREQUAL CMakeFiles)
 		include ("${plugin}/CMakeLists.txt")
 	endif ()
 endforeach(plugin)
